@@ -1,13 +1,20 @@
 v1.4
 ----
 
+* added "details" URL parameter for bulk import API
+  
+  Setting the `details` URL parameter to `true` in a call to POST `/_api/import` will make
+  the import return details about non-imported documents in the `details` attribute. If
+  `details` is `false` or omitted, no `details` attribute will be present in the response.
+  This is the same behavior that previous ArangoDB versions exposed.
+
 * added "complete" option for bulk import API
  
   Setting the `complete` URL parameter to `true` in a call to POST `/_api/import` will make
   the import completely fail if at least one of documents cannot be imported successfully.
 
   It defaults to `false`, which will make ArangoDB continue importing the other documents
-  from the import even if some documents cannot be imported. This is also the behaviour that
+  from the import even if some documents cannot be imported. This is the same behaviour that
   previous ArangoDB versions exposed.
 
 * calling `/_api/logs` (or `/_admin/logs`) is only permitted from the `_system` database now.
